# evalbot

./: .gitignore  1.txt  AI-ML-INVENTORY.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  demo-features.md  demo-script.txt  excalidraw-notes.txt  improvement-braintrust.md  improvement-deepeval.md  prompt.txt
client/: .prettierignore  .prettierrc.json  package.json  pnpm-lock.yaml  tailwind.config.ts
client/app/: Providers.tsx  globals.css  layout.tsx  page.tsx
client/app/evaluations/[id]/: page.tsx
client/app/projects/[id]/: page.tsx
client/components/: Breadcrumbs.tsx  ChatbotEndpointDialog.tsx  DatasetRunHeatmap.tsx  EvaluationResultPanel.tsx  GenerateQuestionsDialog.tsx  PageHeader.tsx  SaveToDatasetDialog.tsx  Sidebar.tsx
client/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  DropZone.tsx  Input.tsx  Markdown.tsx  MetricBar.tsx  QuestionPicker.tsx  ScoreTile.tsx  Select.tsx  Textarea.tsx
client/lib/: api.ts  csv.ts  highlight.ts  relativeTime.ts  scoreColor.ts  thresholds.ts
docs/: EvalBot.txt  README.md  comparison.md  design.md  glossary.md  how-it-works.md  usage.md
server/: .env.example  README.md  pyproject.toml  test_chatbot_connector.py  test_semantic_cache.py
server/app/: chatbot_client.py  config.py  db.py  main.py  models.py  scoring.py  seed_data.py  seed_demo.py  seed_demo_activity.py  seed_demo_rewrite.py
server/app/api/: analytics.py  chatbot_endpoints.py  conversations.py  custom_checks.py  datasets.py  documents.py  dummy_chatbot.py  evaluate.py  evaluations.py  guidelines.py  projects.py  question_gen.py  questions.py  reference.py
server/app/engines/: ai.py  guideline_builder.py  pii.py  rag.py  rules.py  web.py
server/app/engines/judges/: __init__.py  _prompt.py  anthropic.py  gemini.py  ollama.py  openai.py
server/app/services/: reference.py
server/seed/: questions.json
(+11 files in other folders)
