[project]
name = "evalbot-server"
version = "0.1.0"
description = "EvalBot server — FastAPI service for chatbot evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "pydantic",
    "pydantic-settings",
    "python-multipart",
    "python-dotenv",
    "httpx",
    "anthropic",
    "google-generativeai",
    "openai",
    "sentence-transformers",
    "chromadb",
    "rapidfuzz",
    "textstat",
    "pypdf",
    "python-docx",
    "markdown-it-py",
    "trafilatura",
    "beautifulsoup4",
    "reportlab",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "data",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI uses Depends())
    "SIM108", # ternary instead of if-else (sometimes less readable)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"
